--- a/pid.html
+++ b/pid.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.9/jquery.jqplot.min.css" integrity="sha512-x1sYGOeCnohzDAuU02Ecjrjcyiy3iYTGGQjuiFenhGpoQsEtK2V+/ELYnOGFjFY7LDx609Ndm6O01CzRBkZsxA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="resources/css/pid.css">
+    <link rel="stylesheet" href="css/pid.css">
 </head>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -13,9 +13,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqPlot/1.0.9/jquery.jqplot.min.js" integrity="sha512-FQKKXM+/7s6LVHU07eH2zShZHunHqkBCIcDqodXfdV/NNXW165npscG8qOHdxVsOM4mJx38Ep1oMBcNXGB3BCw==" crossorigin="anonymous"></script>
 
-<script src='pidAnim.js'></script>
-<script src='pid.js'></script>
-<script src='scrpt.js'></script>
+<script src='js/pidAnim.js'></script>
+<script src='js/pid.js'></script>
+<script src='js/scrpt.js'></script>
 
 <body>
     <div id='pid'>
@@ -24,51 +24,79 @@
             <ul id="mode">
                 <li><a style='cursor: pointer; font-size: 15px;'>PID Controller</a></li>
                 <li><a style='cursor: pointer; font-size: 15px;'>Manual Control</a></li>
-                <li><a style='cursor: pointer; font-size: 15px;'>Custom Control</a></li>
+                <!-- <li><a style='cursor: pointer; font-size: 15px;'>Custom Control</a></li> -->
             </ul>
         </div>
         <br />
         <div id="pidToolContainer">
             <div id="modelContainer">
-                <div id="modelImgContainer">
-                    <div id="pidController">
-                        <strong>Controller</strong>
-                        <div id="pidInputContainer">
-                            <form id="pidInputForm">
-                                    <table>
-                                        <tbody>
-                                            <tr>
-                                                <td> <span id="P_label">P</span> </td>
-                                                <td> <input type="text" id="p" value="0.05"> </td>
-                                            </tr>
-                                            <tr>
-                                                <td> <span id="I_label">I</span> </td>
-                                                <td> <input type="text" id="i" value="0.001"> </td>
-                                            </tr>
-                                            <tr>
-                                                <td> <span id="D_label">D</span> </td>
-                                                <td> <input type="text" id="d" value="2.5"> </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                            </form>
+                <div id="controllerContainer">
+                    <strong>Controller</strong>
+                    <form id="pidInputForm">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td> <span id="P_label">P</span> </td>
+                                    <td> <input type="text" id="p" value="0.05"> </td>
+                                </tr>
+                                <tr>
+                                    <td> <span id="I_label">I</span> </td>
+                                    <td> <input type="text" id="i" value="0.001"> </td>
+                                </tr>
+                                <tr>
+                                    <td> <span id="D_label">D</span> </td>
+                                    <td> <input type="text" id="d" value="2.5"> </td>
+                                </tr>
+
+                                <tr>
+                                    <div id="desiredContainer">
+                                        Desired: <br/>
+                                        <input type="text" id="desired" value="100">
+                                    </div>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </form>
+                </div>
+                <div id="actuatorContainer">
+                    <p id = "actuatorValue">Actuator:</p>
+                    <div id="actuatorArrow">
+                        <div class="hline"></div>
+                        <div class="rpoint"></div>
+                    </div>
+                </div>
+                <div id="actualArrow">
+                    <div class="hline"></div>
+                    <div class="vline"></div>
+                    <div class="upoint"></div>
+                </div>
+                <div id="plantContainer">
+                    <div>
+                        <canvas id="modelAnimation" width="80" height="280"></canvas>
+                        <p id="actualValue">Actual:</p>
+                    </div>
+                    <div>
+                        <strong>Plant</strong>
+                        <div id="equationsContainer">
+                            <p id="systemEquations">
+                                F = MA<br />
+                                F<sub>ball</sub> = F<sub>fan</sub> + F<sub>g</sub><br />
+                                V<sub>ball</sub> = V<sub>ball</sub> + A<sub>ball</sub>*dt<br />
+                                P<sub>ball</sub> = P<sub>ball</sub> + V<sub>ball</sub>*dt
+                            </p>
+                            <div>
+                                Ball weight:
+                                <span id="ball_weight_text">0.03 grams</span>
+                                <div id="ball_weight"></div>
+                            </div>
+                            <div>
+                                Fan power:
+                                <span id="fan_power_text">0.5</span>
+                                <div id="fan_power"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div id="desiredContainer">
-                    Desired <br/>
-                    <input type="text" id="desired" value="100">
-                </div>
-                <p id="actuatorValue">Actuator:</p>
-                <div id="equationsContainer">
-                    <p id="systemEquations">
-                        F = MA<br />
-                        F<sub>ball</sub> = F<sub>fan</sub> + F<sub>g</sub><br />
-                        V<sub>ball</sub> = V<sub>ball</sub> + A<sub>ball</sub>*dt<br />
-                        P<sub>ball</sub> = P<sub>ball</sub> + V<sub>ball</sub>*dt
-                    </p>
-                </div>
-                <p id="actualValue">Actual:</p>
             </div>
 
             <table cellpadding="5">
@@ -77,23 +105,12 @@
                     <td> <button onclick="stopMetrics(); stopSimulation()">Stop</button> </td>
                     <td> <button onclick="continueMetrics(); continueSimulation()">Continue</button> </td>
                     <td> <button id="resetButton" onclick="resetForm()">Default</button> </td>
-                    <td>
-                        Ball weight:
-                        <span id="ball_weight_text">0.03 grams</span>
-                        <div id="ball_weight"></div>
-                    </td>
-                    <td>
-                        Fan power:
-                        <span id="fan_power_text">0.5</span>
-                        <div id="fan_power"></div>
-                    </td>
                 </tr>
             </table>
 
             <table>
                 <tr>
                     <td> <div id="chartdiv"></div> </td>
-                    <td> <canvas id="modelAnimation" width="300" height="300"></canvas> </td>
                 </tr>
             </table>
         </div>
